--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,11 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87);
+  background-color: #242424; */
+
+  color: #213547;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -35,15 +38,16 @@ body {
 }
 
 header {
-  border: 1px solid white;
-  background-color: #747bff;
+  background-color: #d5d5d5;
   width: 100vw;
+  height: 4rem;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  margin: 0;
+  margin: auto;
+  text-align: center;
 }
 
 button {
@@ -65,7 +69,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -76,4 +80,20 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+footer img {
+  height: 1.5rem;
+}
+
+footer {
+  position: absolute;
+  bottom: 0%;
+  height: 2.5rem;
+  width: 100%;
+  background-color: #d5d5d5;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
 }
